--- a/package.json
+++ b/package.json
@@ -48,15 +48,17 @@
   },
   "dependencies": {
     "bottleneck": "^2.18.0",
-    "brightwheel": "^0.2.1",
     "electron-compile": "^6.4.4",
     "electron-is-dev": "^1.1.0",
     "electron-prompt": "^1.3.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^3.2.0",
-    "fomantic-ui": "^2.7.4",
     "got": "^9.6.0",
-    "node-downloader-helper": "^1.0.10"
+    "node-downloader-helper": "^1.0.10",
+    "tar": ">=4.4.2",
+    "cryptiles": ">=4.1.2",
+    "mime": ">=1.4.1",
+    "hoek": ">=4.2.1"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
