--- a/package.json
+++ b/package.json
@@ -48,17 +48,19 @@
   },
   "dependencies": {
     "bottleneck": "^2.18.0",
+    "cryptiles": ">=4.1.2",
     "electron-compile": "^6.4.4",
     "electron-is-dev": "^1.1.0",
     "electron-prompt": "^1.3.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^3.2.0",
     "got": "^9.6.0",
+    "hoek": ">=4.2.1",
+    "mime": ">=1.4.1",
+    "mkdirp": "^0.5.1",
     "node-downloader-helper": "^1.0.10",
     "tar": ">=4.4.2",
-    "cryptiles": ">=4.1.2",
-    "mime": ">=1.4.1",
-    "hoek": ">=4.2.1"
+    "tmp": "^0.1.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
