--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "bottleneck": "^2.18.0",
     "cryptiles": ">=4.1.2",
+    "electron": "^5.0.1",
     "electron-compile": "^6.4.4",
     "electron-is-dev": "^1.1.0",
     "electron-prompt": "^1.3.0",
@@ -59,6 +60,7 @@
     "mime": ">=1.4.1",
     "mkdirp": "^0.5.1",
     "node-downloader-helper": "^1.0.10",
+    "node-ipc": "^9.1.1",
     "tar": ">=4.4.2",
     "tmp": "^0.1.0"
   },
