--- a/.eslintrc
+++ b/.eslintrc
@@ -5,5 +5,9 @@
     "import/no-extraneous-dependencies": 0,
     "import/no-unresolved": [2, { "ignore": ["electron"] }],
     "linebreak-style": 0
-  }
+  },
+  "env": {
+        "browser": true,
+        "node": true
+    }
 }
